welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: ')' expected but integer literal found.
if (estFaceMur(Buggle 1)) { recule(Biggle 1); } else { avance(Biggle 1) } 
                      ^Program:4: error: ')' expected but '}' found.
	}
        ^